# django-allauth

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  package.json  pyproject.toml  requirements.txt  rest.html  tailwind.config.js
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
core/: admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_todo.py  0003_customer_transaction.py
core/templates/account/: signup.html
core/templates/core/: _signin_fragment.html  _signup_fragment.html  index.html  secret.html  todo.html  transaction.html
core/templates/core/partials/: about.html
frontend/: README.md  SETUP.md  package.json
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Signup.tsx
frontend/src/services/: api.ts  authService.ts
frontend/src/store/slices/: authSlice.ts
src/app/guards/: auth.guard.ts
src/app/interceptors/: auth.interceptor.ts
src/app/services/: todo.service.ts
static/css/: input.css  main.css
static/js/: auth.js
templates/: base.html
templates/components/: _card.html  _navbar.html
