# Project metadata and configuration
[project]
name = "auth-demo"
version = "0.1.0"
description = "Authentication Django project."
readme = "README.md"
requires-python = ">=3.14"

# Core runtime dependencies
dependencies = [
    "Django>=6.0",                                   # Web framework
    "django-allauth[mfa,socialaccount]>=65.13",      # Authentication with MFA and social providers
    "django-cors-headers>=4.9.0",                    # CORS headers support
    "django-extensions>=4.1",                        # Additional Django management commands
    "django-htmx>=1.27",                             # HTMX integration for Django
    "django-template-partials>=25.3",                # Template partials support
    "django-widget-tweaks>=1.5.1",                   # Widget customization utilities
    "djangorestframework>=3.16",                     # REST API toolkit
    "djangorestframework-simplejwt>=5.3",            # JWT token authentication
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",                                # Django template linter
    "ruff>=0.14.0",                                  # Fast Python linter and formatter
]

# Ruff configuration for code quality and formatting
[tool.ruff]
line-length = 88                                     # Maximum line length (matches Black's default)
target-version = "py314"                             # Target Python version for syntax checking

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors (PEP 8 style guide violations)
    "F",   # pyflakes (logical errors and unused imports)
    "I",   # isort (import sorting and organization)
    "DJ",  # flake8-django (Django-specific best practices)
    "UP",  # pyupgrade (automatic Python syntax upgrades)
]
# Ignore line-length errors (E501) - let the formatter handle line wrapping
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"                              # Use double quotes for strings

# DjLint configuration for Django template formatting
[tool.djlint]
profile = "django"                                  # Use Django profile for Django templates
indent = 2                                          # Indentation settings (2 spaces)
use_gitignore = true                                # Respect .gitignore files
format_html = true                                  # Format HTML attributes
format_css = true                                   # Format CSS
format_js = true                                    # Format JavaScript
max_line_length = 120                               # Maximum line length
preserve_blank_lines = true                         # Preserve blank lines
blank_line_after_tag = "block"                     # Add blank lines after block tags
format_template_tags = false                        # Prevent aggressive formatting of template tags
wrap_attributes = "auto"                            # Keep attribute wrapping readable
close_void_tags = true                              # Improve diff stability in CI

# Do not reformat Django template tags that are commonly broken by linters
ignore = [
    "D018",  # Ignore missing end tags (Django blocks)
    "D019",  # Ignore invalid attribute names (hx-, x-data, etc.)
    "D031",  # Ignore inline JavaScript
]

# Allow common Django template syntax (comma-separated string)
custom_blocks = "block,endblock,extends,include,load,static,url,csrf_token"
