# Project metadata and configuration
[project]
name = "auth-demo"
version = "0.1.0"
description = "Authentication Django project."
readme = "README.md"
requires-python = ">=3.14"

# Core runtime dependencies
dependencies = [
    "Django>=6.0",                                   # Web framework
    "django-allauth[mfa,socialaccount]>=65.13",      # Authentication with MFA and social providers
    "django-cors-headers>=4.9.0",                    # CORS headers support
    "django-extensions>=4.1",                        # Additional Django management commands
    "django-htmx>=1.27",                             # HTMX integration for Django
    "django-template-partials>=25.3",                # Template partials support
    "django-widget-tweaks>=1.5.1",                   # Widget customization utilities
    "djangorestframework>=3.16",                     # REST API toolkit
    "djangorestframework-simplejwt>=5.3",            # JWT token authentication
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",                                # Django template linter and formatter
    "ruff>=0.14.0",                                  # Fast Python linter and formatter
    "django-silk>=5.1",                              # SQL query and performance profiling tool
]

# Ruff
[tool.ruff]
line-length = 88                                     # Maximum line length (matches Black's default)
target-version = "py314"                             # Target Python version for syntax checking

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP 8 style guide violations)
    "F",   # pyflakes (logical errors and unused imports)
    "I",   # isort (import sorting and organization)
    "DJ",  # flake8-django (Django-specific best practices)
    "UP",  # pyupgrade (automatic Python syntax upgrades)
]
ignore = ["E501"]                                    # Ignore line-length errors

[tool.ruff.format]
quote-style = "double"                               # Use double quotes for strings

# DjLint
[tool.djlint]
profile = "django"                                   # Use Django profile for Django templates
indent = 2                                           # Indentation settings (2 spaces)
use_gitignore = true                                 # Respect .gitignore files
format_html = true                                   # Format HTML attributes
format_css = true                                    # Format CSS
format_js = true                                     # Format JavaScript
max_line_length = 120                                # Maximum line length
preserve_blank_lines = true                          # Preserve blank lines
max_blank_lines = 1                                  # Maximum blank lines
blank_line_after_tag = "load,extends,include,block"  # Add blank lines after specified tags
blank_line_before_tag = "load,extends,include,block" # Add blank lines before specified tags
close_void_tags = true                               # Improve diff stability in CI
exclude = ".venv"                                    # Exclude directories from formatting
format_attribute_template_tags = true                # Format template tags in attributes
